--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Truta446/video-maker-by-robots#readme",
   "dependencies": {
     "algorithmia": "^0.3.10",
+    "fs": "0.0.1-security",
     "googleapis": "^38.0.0",
     "readline-sync": "^1.4.9",
     "sbd": "^1.0.15",
