--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,11 @@ typings/
 credentials/*.json
 
 content.json
+
+content/*.png
+content/*.jpg
+content/*.js
+content/*.mov
+Adobe After Effects Auto-Save
+template.aep Logs
+.DS_Store
