--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
   },
   "homepage": "https://github.com/Truta446/video-maker-by-robots#readme",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.17",
+    "@ffprobe-installer/ffprobe": "^1.0.10",
     "algorithmia": "^0.3.10",
+    "express": "^4.16.4",
+    "fluent-ffmpeg": "^2.1.2",
     "fs": "0.0.1-security",
     "gm": "^1.23.1",
     "googleapis": "^38.0.0",
     "image-downloader": "^3.4.2",
     "readline-sync": "^1.4.9",
     "sbd": "^1.0.15",
+    "videoshow": "^0.1.11",
     "watson-developer-cloud": "^3.18.3"
   }
 }
